@@ -1,7 +1,8 @@
 
 To compile, you'll need the open source version of QT4, GNU flex and bison.
 Specifcally for LINUX you will need:
-* FLite or Espeak development libraries  (espeak has problems when sound and say are used in same program 0.9.5i, use flite 1.4 or better) 
+* FLite or Espeak development libraries
+* SDL and SDL_mixer development libraries
 * g++ compiler and base development libraries
 
 Specifically for Windows you will need:
